# OGL-Renders

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  install.ps1  install.sh
.github/workflows/: build.yml
blackhole/: CMakeLists.txt  README.md  main.cpp
fractal-zoom/: CMakeLists.txt  main.cpp
waves/: CMakeLists.txt  main.cpp
